# arithmetic-calculator

./: Dockerfile  ProjectPlan.md  README.md  docker-compose.yml  pyproject.toml
src/arithmetic_calculator/: main.py
src/arithmetic_calculator/api/: calculator_routes.py  v1.py
src/arithmetic_calculator/domain/: calculator.py
src/arithmetic_calculator/dto/: calculator_dto.py
src/arithmetic_calculator/repository/: calculator_repository.py
src/arithmetic_calculator/service/: calculator_service.py
src/domain/: calculator.py
src/tests/api/: test_calculator_routes.py  test_calculator_service.py
